add expired and CustomEceptionHandler

--- a/src/main/resources/de/play/i18n/text_de.properties
+++ b/src/main/resources/de/play/i18n/text_de.properties
@@ -27,3 +27,7 @@ pages.form.header=Formular mit Jakarta Validation
 pages.contact.header=Kontakt
 pages.footer.smallText=K\u00f6nnen wir helfen?
 pages.footer.contact=Kontakt
+
+pages.expired.header=Hoppla, die Sitzung ist abgelaufen
+pages.expired.redirected=Du wirst gleich zur Startseite weitergeleitet
+pages.expired.clickHereToRedirect=Klick hier, falls der redirekt nicht funktioniert hat
