--- a/src/main/resources/de/play/i18n/text_en.properties
+++ b/src/main/resources/de/play/i18n/text_en.properties
@@ -27,3 +27,7 @@ pages.form.header=Form with Jakarta Validation
 pages.contact.header=Contact
 pages.footer.smallText=Can we help you?
 pages.footer.contact=Contact
+
+pages.expired.header=Oops, the session is expired
+pages.expired.redirected=You will be redirected to start page
+pages.expired.clickHereToRedirect=Click here, if the redirect doesn't work.
