added form-taglibs, form-taglib, secure cookie. Changes in AddressValidator

--- a/src/main/resources/de/play/i18n/messages_de.properties
+++ b/src/main/resources/de/play/i18n/messages_de.properties
@@ -25,6 +25,6 @@ STREET_MISSING=Bitte geben Sie die Stra\u00dfe ein.
 COUNTRY_MISSING=Bitte geben Sie Ihr Land ein.
 BIRTHDAY_MISSING=Bitte geben Sie Ihren Geburstag ein.
 SERIALNUMBER_MISSING=Bitte geben Sie die Seriennummer ein.
-FIRSTNAME_MISSING=Bitte geben Sie Ihren Vornamen ein.#
+FIRSTNAME_MISSING=Bitte geben Sie Ihren Vornamen ein.
 TERMS_ACCEPTED_MISSING=Bitte akzeptieren Sie die Bedingungen.
 EMAIL_MISSING=Bitte geben Sie Ihre E-Mail Adresse ein.
