--- a/src/main/resources/de/play/i18n/text_de.properties
+++ b/src/main/resources/de/play/i18n/text_de.properties
@@ -23,7 +23,10 @@ country.france=Frankreich
 
 pages.index.header=Faces Playground
 pages.index.linkToForm=Formular mit Jakarta Validation
+pages.index.linkToFormWithTaglibs=Formular mit Jakarta Validation und Taglib Feldern
+
 pages.form.header=Formular mit Jakarta Validation
+pages.form-taglibs.header=Formular mit Jakarta Validation und Taglibs
 pages.contact.header=Kontakt
 pages.footer.smallText=K\u00f6nnen wir helfen?
 pages.footer.contact=Kontakt
