--- a/src/main/resources/de/play/i18n/text_en.properties
+++ b/src/main/resources/de/play/i18n/text_en.properties
@@ -22,8 +22,11 @@ country.germany=Germany
 country.france=France
 
 pages.index.header=Faces Playground
-pages.index.linkToForm=Formular with Jakarta Validation
-pages.form.header=Form with Jakarta Validation
+pages.index.linkToForm=Form with Jakarta Validation
+pages.index.linkToFormWithTaglibs=Form with Jakarta Validation and Taglib Fields
+
+pages.form.header=Form with Jakarta validation
+pages.form-taglibs.header=Form with Jakarta validation and taglibs
 pages.contact.header=Contact
 pages.footer.smallText=Can we help you?
 pages.footer.contact=Contact
