Add third formular with bean validation. minor fixes.

--- a/src/main/resources/de/play/i18n/messages_de.properties
+++ b/src/main/resources/de/play/i18n/messages_de.properties
@@ -12,6 +12,9 @@ jakarta.faces.component.UIInput.REQUIRED=Bitte f\u00fcllen Sie das Feld aus
 # ==============================================================================
 de.play.faces.validator.EmailValidator.MESSAGE=Die E-Mail Adresse ist ung\u00fcltig.
 
+# ==============================================================================
+# Sontige
+# ==============================================================================
 messageRequired=Bitte gegen Sie Ihre Nachricht ein.
 emailRequired=Bitte geben Sie Ihre E-Mail Adresses ein.
 
@@ -20,7 +23,7 @@ ZIP_INVALID=Die PLZ ist unbekannt.
 CITY_INVALID=Die Stadt ist unbekannt.
 STREET_INVALID=Die Stra\u00dfe ist unbekannt.
 ZIP_MISSING=Bitte geben Sie die PLZ ein.
-CITY_MISSING=Bitte geben Sie die Stadt ein,
+CITY_MISSING=Bitte geben Sie die Stadt ein.
 STREET_MISSING=Bitte geben Sie die Stra\u00dfe ein.
 COUNTRY_MISSING=Bitte geben Sie Ihr Land ein.
 BIRTHDAY_MISSING=Bitte geben Sie Ihren Geburstag ein.
