--- a/src/main/resources/de/play/i18n/messages_en.properties
+++ b/src/main/resources/de/play/i18n/messages_en.properties
@@ -7,13 +7,14 @@
 # ==============================================================================
 jakarta.faces.component.UIInput.REQUIRED=Please enter the field.
 
-
 # ==============================================================================
 # Validators
 # ==============================================================================
 de.play.faces.validator.EmailValidator.MESSAGE=The email address is invalid.
 
-
+# ==============================================================================
+# Sontige
+# ==============================================================================
 messageRequired=Please enter your Messsage.
 emailRequired=Please enter your E-Mail address.
 
