--- a/src/main/resources/de/play/i18n/text_de.properties
+++ b/src/main/resources/de/play/i18n/text_de.properties
@@ -18,15 +18,20 @@ button.submit=Absenden
 currentLanguage=Aktuelle Sprache
 phone=Telefon
 
-country.germany=Deutschlandy
+country.germany=Deutschland
 country.france=Frankreich
+
+submit.thankYou=Vielen Dank.
 
 pages.index.header=Faces Playground
 pages.index.linkToForm=Formular mit Jakarta Validation
 pages.index.linkToFormWithTaglibs=Formular mit Jakarta Validation und Taglib Feldern
+pages.index.linkToFormWithBeanValidation=Formular mit Jakarta Bean Validation
 
 pages.form.header=Formular mit Jakarta Validation
 pages.form-taglibs.header=Formular mit Jakarta Validation und Taglibs
+pages.form-bean-validation.header=Formular mit Jakarta Bean Validation
+
 pages.contact.header=Kontakt
 pages.footer.smallText=K\u00f6nnen wir helfen?
 pages.footer.contact=Kontakt
