--- a/src/main/resources/de/play/i18n/text_en.properties
+++ b/src/main/resources/de/play/i18n/text_en.properties
@@ -21,9 +21,13 @@ phone=Phone
 country.germany=Germany
 country.france=France
 
+submit.thankYou=Thank you.
+
 pages.index.header=Faces Playground
 pages.index.linkToForm=Form with Jakarta Validation
 pages.index.linkToFormWithTaglibs=Form with Jakarta Validation and Taglib Fields
+pages.index.linkToFormWithBeanValidation=Form with Jakarta Bean Validation
+pages.form-bean-validation.header=Formular with Jakarta Bean Validation
 
 pages.form.header=Form with Jakarta validation
 pages.form-taglibs.header=Form with Jakarta validation and taglibs
