smaller svg files, AddressService improvement, formatting

--- a/src/main/resources/de/play/i18n/messages_de.properties
+++ b/src/main/resources/de/play/i18n/messages_de.properties
@@ -1,5 +1,5 @@
 # ==============================================================================
-# Die key sind im jakarta.faces-api-4.0.1.jar -> Message*.properties
+# Die key's sind im jakarta.faces-api-4.0.1.jar -> Message*.properties
 # ==============================================================================
 
 # ==============================================================================
@@ -13,7 +13,7 @@ jakarta.faces.component.UIInput.REQUIRED=Bitte f\u00fcllen Sie das Feld aus
 de.play.faces.validator.EmailValidator.MESSAGE=Die E-Mail Adresse ist ung\u00fcltig.
 
 # ==============================================================================
-# Sontige
+# Sonstige
 # ==============================================================================
 messageRequired=Bitte gegen Sie Ihre Nachricht ein.
 emailRequired=Bitte geben Sie Ihre E-Mail Adresses ein.
