add example register and user-management

--- a/src/main/resources/de/play/i18n/messages_de.properties
+++ b/src/main/resources/de/play/i18n/messages_de.properties
@@ -11,12 +11,16 @@ jakarta.faces.component.UIInput.REQUIRED=Bitte f\u00fcllen Sie das Feld aus
 # Validators
 # ==============================================================================
 de.play.faces.validator.EmailValidator.MESSAGE=Die E-Mail Adresse ist ung\u00fcltig.
+de.play.faces.validator.DateValidator.INVALID_MIN_DATE=Das Datum kann nicht angenommen werden. Es muss nach dem %s liegen.
+de.play.faces.validator.DateValidator.INVALID_MAX_DATE=Das Datum kann nicht angenommen werden. Es muss vor dem %s liegen.
 
 # ==============================================================================
 # Sonstige
 # ==============================================================================
 messageRequired=Bitte gegen Sie Ihre Nachricht ein.
 emailRequired=Bitte geben Sie Ihre E-Mail Adresses ein.
+
+technicalFailureTryAgainLater=Es ist ein technisches Problem aufgetreten. Bitte versuchen Sie es sp\u00e4ter erneut.
 
 ADDRESS_INVALID=Die Adresse ist ung\u00fcltig.
 ZIP_INVALID=Die PLZ ist unbekannt.
@@ -31,3 +35,4 @@ SERIALNUMBER_MISSING=Bitte geben Sie die Seriennummer ein.
 FIRSTNAME_MISSING=Bitte geben Sie Ihren Vornamen ein.
 TERMS_ACCEPTED_MISSING=Bitte akzeptieren Sie die Bedingungen.
 EMAIL_MISSING=Bitte geben Sie Ihre E-Mail Adresse ein.
+PASSWORD_MISSING=Bitte geben Sie ein Passwort ein.
