--- a/src/main/resources/de/play/i18n/messages_en.properties
+++ b/src/main/resources/de/play/i18n/messages_en.properties
@@ -11,12 +11,16 @@ jakarta.faces.component.UIInput.REQUIRED=Please enter the field.
 # Validators
 # ==============================================================================
 de.play.faces.validator.EmailValidator.MESSAGE=The email address is invalid.
+de.play.faces.validator.DateValidator.INVALID_MIN_DATE=The date cannot be accepted. It must be after the %s.
+de.play.faces.validator.DateValidator.INVALID_MAX_DATE=The date cannot be accepted. It must be before the %s.
 
 # ==============================================================================
 # Sontige
 # ==============================================================================
 messageRequired=Please enter your Messsage.
 emailRequired=Please enter your E-Mail address.
+
+technicalFailureTryAgainLater=A technical problem has occurred. Please try again later.
 
 ADDRESS_INVALID=The address is invalid.
 ZIP_INVALID=Invalid zip.
@@ -31,3 +35,4 @@ SERIALNUMBER_MISSING=Please enter the serialnumber.
 FIRSTNAME_MISSING=Please enter your firstname.
 TERMS_ACCEPTED_MISSING=Please accept the terms.
 EMAIL_MISSING=Please enter your e-mail address.
+PASSWORD_MISSING=Please enter a password.
