--- a/src/main/resources/de/play/i18n/text_de.properties
+++ b/src/main/resources/de/play/i18n/text_de.properties
@@ -14,6 +14,7 @@ input.option.choose=W\u00e4hlen
 
 button.takeOver=\u00dcbernehmen
 button.submit=Absenden
+button.cancel=Abbrechen
 
 currentLanguage=Aktuelle Sprache
 phone=Telefon
@@ -27,6 +28,8 @@ pages.index.header=Faces Playground
 pages.index.linkToForm=Formular mit Jakarta Validation
 pages.index.linkToFormWithTaglibs=Formular mit Jakarta Validation und Taglib Feldern
 pages.index.linkToFormWithBeanValidation=Formular mit Jakarta Bean Validation
+pages.index.linkToRegister=Registrierung
+pages.index.linkToUserManagement=Benutzerverwaltung
 
 pages.form.header=Formular mit Jakarta Validation
 pages.form-taglibs.header=Formular mit Jakarta Validation und Taglibs
@@ -39,3 +42,8 @@ pages.footer.contact=Kontakt
 pages.expired.header=Hoppla, die Sitzung ist abgelaufen
 pages.expired.redirected=Du wirst gleich zur Startseite weitergeleitet
 pages.expired.clickHereToRedirect=Klick hier, falls der redirekt nicht funktioniert hat
+
+pages.register.header=Registrierung
+
+pages.user-management.header=Benutzerverwaltung
+pages.user-management.add-user=Benutzer hinzuf\u00fcgen
