--- a/src/main/resources/de/play/i18n/text_en.properties
+++ b/src/main/resources/de/play/i18n/text_en.properties
@@ -14,6 +14,7 @@ input.option.choose=Choose
 
 button.takeOver=Take over
 button.submit=Submit
+button.cancel=Cancel
 
 currentLanguage=Current Language
 phone=Phone
@@ -27,10 +28,13 @@ pages.index.header=Faces Playground
 pages.index.linkToForm=Form with Jakarta Validation
 pages.index.linkToFormWithTaglibs=Form with Jakarta Validation and Taglib Fields
 pages.index.linkToFormWithBeanValidation=Form with Jakarta Bean Validation
-pages.form-bean-validation.header=Formular with Jakarta Bean Validation
+pages.index.linkToRegister=Register
+pages.index.linkToUserManagement=User Management
 
 pages.form.header=Form with Jakarta validation
 pages.form-taglibs.header=Form with Jakarta validation and taglibs
+pages.form-bean-validation.header=Formular with Jakarta Bean Validation
+
 pages.contact.header=Contact
 pages.footer.smallText=Can we help you?
 pages.footer.contact=Contact
@@ -38,3 +42,8 @@ pages.footer.contact=Contact
 pages.expired.header=Oops, the session is expired
 pages.expired.redirected=You will be redirected to start page
 pages.expired.clickHereToRedirect=Click here, if the redirect doesn't work.
+
+pages.register.header=Register
+
+pages.user-management.header=User Management
+pages.user-management.add-user=Add User
