--- a/src/main/resources/de/play/i18n/text_de.properties
+++ b/src/main/resources/de/play/i18n/text_de.properties
@@ -30,6 +30,7 @@ pages.index.linkToFormWithTaglibs=Formular mit Jakarta Validation und Taglib Fel
 pages.index.linkToFormWithBeanValidation=Formular mit Jakarta Bean Validation
 pages.index.linkToRegister=Registrierung
 pages.index.linkToUserManagement=Benutzerverwaltung
+pages.index.linkToImages=Bilder
 
 pages.form.header=Formular mit Jakarta Validation
 pages.form-taglibs.header=Formular mit Jakarta Validation und Taglibs
@@ -44,6 +45,9 @@ pages.expired.redirected=Du wirst gleich zur Startseite weitergeleitet
 pages.expired.clickHereToRedirect=Klick hier, falls der redirekt nicht funktioniert hat
 
 pages.register.header=Registrierung
+
+pages.images.header=Bilder Resourcen
+pages.images.description=Verschiedene Arten um auf Bilder zu zugreifen
 
 pages.user-management.header=Benutzerverwaltung
 pages.user-management.add-user=Benutzer hinzuf\u00fcgen
