--- a/src/main/resources/de/play/i18n/text_en.properties
+++ b/src/main/resources/de/play/i18n/text_en.properties
@@ -30,6 +30,7 @@ pages.index.linkToFormWithTaglibs=Form with Jakarta Validation and Taglib Fields
 pages.index.linkToFormWithBeanValidation=Form with Jakarta Bean Validation
 pages.index.linkToRegister=Register
 pages.index.linkToUserManagement=User Management
+pages.index.linkToImages=Images
 
 pages.form.header=Form with Jakarta validation
 pages.form-taglibs.header=Form with Jakarta validation and taglibs
@@ -44,6 +45,9 @@ pages.expired.redirected=You will be redirected to start page
 pages.expired.clickHereToRedirect=Click here, if the redirect doesn't work.
 
 pages.register.header=Register
+
+pages.images.header=Images Resources
+pages.images.description=Different ways to access images.
 
 pages.user-management.header=User Management
 pages.user-management.add-user=Add User
