microprofile-rest-client, microprofile-config, microprofile-fault-tolerance hinzugefügt

--- a/src/main/resources/de/play/i18n/text_de.properties
+++ b/src/main/resources/de/play/i18n/text_de.properties
@@ -23,6 +23,7 @@ country.germany=Deutschland
 country.france=Frankreich
 
 submit.thankYou=Vielen Dank.
+submit.created=Eintrag angelegt.
 
 pages.index.header=Faces Playground
 pages.index.linkToForm=Formular mit Jakarta Validation
@@ -31,6 +32,7 @@ pages.index.linkToFormWithBeanValidation=Formular mit Jakarta Bean Validation
 pages.index.linkToRegister=Registrierung
 pages.index.linkToUserManagement=Benutzerverwaltung
 pages.index.linkToImages=Bilder
+pages.index.linkToRestClient=Rest Client
 
 pages.form.header=Formular mit Jakarta Validation
 pages.form-taglibs.header=Formular mit Jakarta Validation und Taglibs
@@ -51,3 +53,5 @@ pages.images.description=Verschiedene Arten um auf Bilder zu zugreifen
 
 pages.user-management.header=Benutzerverwaltung
 pages.user-management.add-user=Benutzer hinzuf\u00fcgen
+
+pages.rest-client.header=Rest Client
