--- a/src/main/resources/de/play/i18n/text_en.properties
+++ b/src/main/resources/de/play/i18n/text_en.properties
@@ -23,6 +23,7 @@ country.germany=Germany
 country.france=France
 
 submit.thankYou=Thank you.
+submit.created=Entry created.
 
 pages.index.header=Faces Playground
 pages.index.linkToForm=Form with Jakarta Validation
@@ -31,6 +32,7 @@ pages.index.linkToFormWithBeanValidation=Form with Jakarta Bean Validation
 pages.index.linkToRegister=Register
 pages.index.linkToUserManagement=User Management
 pages.index.linkToImages=Images
+pages.index.linkToRestClient=Rest Client
 
 pages.form.header=Form with Jakarta validation
 pages.form-taglibs.header=Form with Jakarta validation and taglibs
@@ -51,3 +53,5 @@ pages.images.description=Different ways to access images.
 
 pages.user-management.header=User Management
 pages.user-management.add-user=Add User
+
+pages.rest-client.header=Rest Client
