add TempDirDataCache with example Products page

--- a/src/main/resources/de/play/i18n/text_de.properties
+++ b/src/main/resources/de/play/i18n/text_de.properties
@@ -33,6 +33,7 @@ pages.index.linkToRegister=Registrierung
 pages.index.linkToUserManagement=Benutzerverwaltung
 pages.index.linkToImages=Bilder
 pages.index.linkToRestClient=Rest Client
+pages.index.linkToProducts=Produkte
 
 pages.form.header=Formular mit Jakarta Validation
 pages.form-taglibs.header=Formular mit Jakarta Validation und Taglibs
@@ -55,3 +56,5 @@ pages.user-management.header=Benutzerverwaltung
 pages.user-management.add-user=Benutzer hinzuf\u00fcgen
 
 pages.rest-client.header=Rest Client
+
+pages.products.header=Produkte
