--- a/src/main/resources/de/play/i18n/text_en.properties
+++ b/src/main/resources/de/play/i18n/text_en.properties
@@ -33,6 +33,7 @@ pages.index.linkToRegister=Register
 pages.index.linkToUserManagement=User Management
 pages.index.linkToImages=Images
 pages.index.linkToRestClient=Rest Client
+pages.index.linkToProducts=Products
 
 pages.form.header=Form with Jakarta validation
 pages.form-taglibs.header=Form with Jakarta validation and taglibs
@@ -55,3 +56,5 @@ pages.user-management.header=User Management
 pages.user-management.add-user=Add User
 
 pages.rest-client.header=Rest Client
+
+pages.products.header=Products
